# Synapse

./: .gitignore  README.md  main.py  pyproject.toml  research_agent.py  run.sh  run_app.bat
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
